# backend/internal/controller/product.go
@@ -30,6 +30,14 @@ func NewProductController(c container.Container) ProductController {
 	}
 }
 
+// GetProducts godoc
+// @Summary Get all products
+// @Description Retrieves a list of all available products.
+// @Tags Products
+// @Produce  json
+// @Success 200 {array} object{ID=uint,name=string,price=int,description=string,slug=string,image=string} "List of products retrieved successfully"
+// @Failure 400 {object} map[string]string "Products not found"
+// @Router /api/products [get]
 func (pc *productController) GetProducts(c *gin.Context) {
 	products, err := pc.service.GetAllProducts()
 	if err != nil {
@@ -39,6 +47,16 @@ func (pc *productController) GetProducts(c *gin.Context) {
 	c.JSON(http.StatusOK, products)
 }
 
+// CreateProduct godoc
+// @Summary Create a new product
+// @Description Creates a new product with the provided information.
+// @Tags Products
+// @Accept  json
+// @Produce  json
+// @Param   product   body    object{name=string,price=int,description=string,slug=string,image=string}  true  "Product data"
+// @Success 200 {object} object{ID=uint,name=string,price=int,description=string,slug=string,image=string} "Product created successfully"
+// @Failure 400 {object} map[string]string "Invalid product data / Cannot create product"
+// @Router /api/products [post]
 func (pc *productController) CreateProduct(c *gin.Context) {
 	var product models.Product
 	logger := pc.container.GetLogger()
